Update README.md
here is information about to setup the above file which is run on netbeans